--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -35,14 +35,13 @@ DEFS =          @DEFS@ \
                 -DICEHELPIDX='"$(DOCDIR)/icewm-$(VERSION)/icewm.html"'
 
 CXXFLAGS =      @CXXFLAGS@ $(DEBUG) $(DEFS) `pkg-config gdk-pixbuf-xlib-2.0 --cflags` \
-	        @CORE_CFLAGS@ @IMAGE_CFLAGS@ @AUDIO_CFLAGS@ # `fc-config --cflags`
+	        @CORE_CFLAGS@ @IMAGE_CFLAGS@ @AUDIO_CFLAGS@ `pkg-config fontconfig --cflags`
 LFLAGS =	@LDFLAGS@ 
 LIBS =          @LIBS@ `pkg-config gdk-pixbuf-xlib-2.0 --libs` 
 
-CORE_LIBS =     @CORE_LIBS@ # `fc-config --libs`
+CORE_LIBS =     @CORE_LIBS@ `pkg-config fontconfig --libs`
 IMAGE_LIBS =    @IMAGE_LIBS@
 AUDIO_LIBS =    @AUDIO_LIBS@
-GNOME1_LIBS =    @GNOME1_LIBS@
 GNOME2_LIBS =    @GNOME2_LIBS@
 
 ################################################################################
@@ -112,11 +111,6 @@ icesound_LIBS = \
 icesound_OBJS = \
 	icesound.o misc.o ycmdline.o
 
-icewm-menu-gnome1_LIBS = \
-	$(CORE_LIBS) $(GNOME1_LIBS)
-icewm-menu-gnome1_OBJS = \
-	gnome.o misc.o ycmdline.o yarray.o
-
 icewm-menu-gnome2_LIBS = \
 	$(CORE_LIBS) $(GNOME2_LIBS)
 icewm-menu-gnome2_OBJS = \
@@ -131,9 +125,11 @@ iceclock_OBJS = \
 	$(libitk_OBJS) $(libice_OBJS) iceclock.o aclock.o
 iceclock_LIBS = \
 	$(CORE_LIBS) $(IMAGE_LIBS)
+icebar_LIBS = \
+	$(CORE_LIBS) $(IMAGE_LIBS)
 icebar_OBJS = \
 	$(libitk_OBJS) $(libice_OBJS) \
-        wmtaskbar.o \
+        icebar.o wmtaskbar.o \
         wmprog.o browse.o themes.o wmaction.o \
 	amailbox.o aclock.o acpustatus.o apppstatus.o aaddressbar.o objbar.o
 icewmtray_OBJS = \
@@ -222,10 +218,6 @@ genpref$(EXEEXT):
 	@$(HOSTLD) -o $@ $(genpref_OBJS)
 
 ################################################################################
-
-gnome.o: gnome.cc
-	@echo "  CXX     " $@
-	@$(CXX) $(CXXFLAGS)  @GNOME1_CFLAGS@ $(GCCDEP) -c $<
 
 gnome2.o: gnome2.cc
 	@echo "  CXX     " $@
