--- a/debian/rules
+++ b/debian/rules
@@ -7,6 +7,8 @@ SHELL=/bin/bash
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 DPKG_EXPORT_BUILDFLAGS = 1
 include /usr/share/dpkg/buildflags.mk
+-include /usr/share/quilt/quilt.make
+
 LDFLAGS += -lm -Wl,--as-needed
 # workaround, cppflags lost somewhere in the build system
 CXXFLAGS += $(CPPFLAGS)
