Remove wrong Makefiles again, confuse the lite build

--- a/debian/rules
+++ b/debian/rules
@@ -117,7 +117,7 @@ clean:
 	dh_testroot
 	rm -rf $(BDIR)*
 	-$(MAKE) -C po clean 
-	rm -f stamp* *stamp config.guess config.sub # `find . -name "*~"` Makefile icewm.lsm icewm.spec src/icesound-* config.log src/config.h
+	rm -f stamp* *stamp config.guess config.sub Makefile config.log src/config.h
 	dh_clean
 
 install: build
