--- a/lib/keys.in
+++ b/lib/keys.in
@@ -9,9 +9,9 @@
 # You'll have to omit XK_ prefixs and to replace XF86XK_ prefixes by
 # XF86. Valid modifiers are Alt, Ctrl, Shift, Meta, Super and Hyper.
 #
-key "Alt+Ctrl+t"			xterm
-key "Alt+Ctrl+b"			xdg-open about:blank
-key "Alt+Ctrl+s"			xdg-open http://www.google.com
+key "Alt+Ctrl+t"			x-terminal-emulator
+key "Alt+Ctrl+b"			sensible-browser about:blank
+key "Alt+Ctrl+s"			sensible-browser http://www.duckduckgo.com
 
 key "Super+KP_Subtract"		amixer sset PCM 5%-
 key "Super+KP_Add"			amixer sset PCM 5%+
@@ -20,10 +20,10 @@ key "Super+KP_Add"			amixer sset PCM 5%+
 # advanced function keys by watching the output of the xev command whilest
 # pressing those keys and map those symbols by using xmodmap.
 
-key "XF86Standby"			killall -QUIT icewm
+key "XF86Standby"			/bin/sh -c "{ test -e /run/systemd/system && systemctl suspend; } || sudo -n pm-suspend"
 key "XF86AudioLowerVolume"	amixer sset PCM 5%-
 key "XF86AudioRaiseVolume"	amixer sset PCM 5%+
 key "XF86AudioMute"			amixer sset PCM 0%
-key "XF86HomePage"			xdg-open about:blank
-key "XF86Search"			xdg-open http://www.google.com
+key "XF86HomePage"			sensible-browser about:blank
+key "XF86Search"			sensible-browser http://www.google.com
 key "XF86Eject"				eject
