--- a/lib/toolbar.in
+++ b/lib/toolbar.in
@@ -5,5 +5,5 @@
 # (re)install icewm.
 #
 prog Terminal /usr/share/icons/gnome/16x16/apps/terminal.png x-terminal-emulator
-prog "Web browser" /usr/share/icons/gnome/16x16/apps/web-browser.png sensible-browser about:blank
+prog "Web browser" /usr/share/icewm/icons/mozilla_16x16.xpm sensible-browser about:blank
 
