--- a/debian/rules
+++ b/debian/rules
@@ -32,7 +32,8 @@ confflags += --build $(DEB_BUILD_GNU_TYPE) --host $(DEB_HOST_GNU_TYPE) \
 	     --datadir=/usr/share --disable-debug \
 	     --enable-i18n --enable-nls \
 	     --htmldir=$(DOCDIR)/html \
-	     --docdir=$(DOCDIR)
+	     --docdir=$(DOCDIR) \
+	     EXTRA_LIBS="-lsupc++"
 
 ICONS=$(CURDIR)/debian/icons
 FDO=$(CURDIR)/debian/fdo
