--- a/debian/control
+++ b/debian/control
@@ -5,17 +5,14 @@ Maintainer: Eduard Bloch <blade@debian.org>
 Build-Depends: debhelper (>= 5.0.51), libgdk-pixbuf2.0-dev, libxrender-dev, gettext, xfonts-utils, libxft-dev (>> 2.1.1) | libxft2-dev, libesd0-dev, libpng-dev, libsm-dev, libx11-dev, libxext-dev, libxft-dev, libxinerama-dev, libxpm-dev (>= 1:3.5.4.2-3), libxrandr-dev, x11proto-core-dev | x-dev, linuxdoc-tools, libxt-dev, autotools-dev, dpkg-dev (>= 1.16.1~)
 Build-Conflicts: libttf-dev
 Standards-Version: 3.9.6
-Homepage: http://www.icewm.org
-Vcs-Browser: https://alioth.debian.org/scm/browser.php?group_id=30131
-Vcs-Git: https://alioth.debian.org/anonscm/git/pkg-icewm/pkg-icewm.git
+Vcs-Git: https://github.com/Code7R/icewm.git
 
 Package: icewm-common
 Architecture: any
 Conflicts: menu (<< 2.1.9-1)
-Replaces: icewm (<< 1.2.14)
-Suggests: icewm-themes, xscreensaver
+Replaces: icewm (<< 1.2.14), icewm-gnome-support (<< 1.3.9)
 Depends: ${misc:Depends}, ${shlibs:Depends}
-Recommends: menu
+Recommends: menu, xscreensaver
 Description: wonderful Win95-OS/2-Motif-like window manager
  IceWm is a Window Manager for X Window System. Can emulate the look of
  Windows'95, OS/2 Warp 3,4, Motif. Tries to take the best features of the above
@@ -36,8 +33,6 @@ Description: wonderful Win95-OS/2-Motif-like window manager
  OS/2 Warp 3,4, Motif. It tries to take the best features of the above
  systems. Additional features include  multiple workspaces, opaque move/resize,
  task bar, window list, mailbox status, digital clock.
- .
- Extra themes are available from the icewm-themes package.
 
 Package: icewm-lite
 Architecture: any
@@ -52,8 +47,6 @@ Description: wonderful Win95-OS/2-Motif-like window manager
  .
  This package provides a minimal icewm binary with no support for
  taskbar and antialiased fonts.
- .
- Extra themes are available from the icewm-themes package.
 
 Package: icewm-experimental
 Architecture: any
