--- a/debian/rules
+++ b/debian/rules
@@ -177,7 +177,7 @@ binary-arch: build install
 	ln -sf icewm.gz debian/icewm/usr/share/man/man1/icesound.1x.gz
 	ln -sf icewm.gz debian/icewm-experimental/usr/share/man/man1/icesound-experimental.1x.gz
 	ln -sf icewm.gz debian/icewm-common/usr/share/man/man1/icewm-menu-fdo.1x.gz
-
+	dh_fixperms
 	dh_installdeb
 	dh_shlibdeps
 	dh_gencontrol
