--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,4 +1,4 @@
 [DEFAULT]
-debian-branch = debian/sid
-upstream-branch = upstream/sid
+debian-branch = debian/experimental
+upstream-branch = icewm-1-3-BRANCH
 
