--- a/debian/rules
+++ b/debian/rules
@@ -45,7 +45,8 @@ CUSTOM=$(CURDIR)/debian/custom
 
 # DEBVERSION=$(shell dpkg-parsechangelog -SVersion)
 # that one also works with wheezy
-DEBVERSION=$(dpkg-parsechangelog |grep ^Version | sed -e s,Version:.,,)
+DEBVERSION=$(shell dpkg-parsechangelog |grep ^Version | sed -e s,Version:.,,)
+ORIGVERSION=$(shell echo $(DEBVERSION) | sed -e 's,-[^-]*$$,,' )
 
 modconfig = sed -e 's,\(.*\)VERSION.*,\1VERSION "$(DEBVERSION)",' \
 						-e 's,ICEHELPIDX.*,ICEHELPIDX "$(DOCDIR)/html/icewm.html",' \
@@ -101,6 +102,7 @@ clean:
 	rm -rf $(BDIR)*
 	$(MAKE) -C po clean ||true
 	rm -f stamp* *stamp config.guess config.sub Makefile config.log src/config.h
+	rm -f po/*.mo po/*.gmo
 	dh_clean
 
 install: build
@@ -132,7 +134,8 @@ install: build
 	rm -rf $(ICEWM_COMMON)/usr/share/applications/*desktop
 	# Install documentation
 	mv $(ICEWM_COMMON)/usr/share/doc/icewm-common/*.html $(ICEWM_COMMON)/usr/share/doc/icewm-common/html/
-	rm -rf $(ICEWM_COMMON)/usr/share/doc/icewm-common/FAQ/source
+	mkdir $(ICEWM_COMMON)/usr/share/doc/icewm-common/FAQ
+	cd $(ICEWM_COMMON)/usr/share/doc/icewm-common/FAQ && sgml2html $(CURDIR)/debian/FAQ/source/*.sgml
 	# and add our bits to fix the font insanity with xft2
 	dh_installexamples -picewm-common $(CURDIR)/debian/examples/preferences.fonts $(CURDIR)/debian/examples/preferences.noClickToFocus $(CURDIR)/debian/examples/focus_mode.noClickToFocus
 	# Remove doc directories since we will add links
@@ -182,8 +185,18 @@ binary-arch: build install
 
 binary:	binary-indep binary-arch
 
-distclean:
+cleancruft:
 	git clean -fdx -e .cproject -e .project -e .settings
+	git checkout HEAD -- README.md configure.ac
+
+get-orig-source:
+	git archive icewm-1-3-BRANCH --prefix icewm-$(ORIGVERSION)/ | xz -9 > ../icewm_$(ORIGVERSION).orig.tar.xz
+
+update-debian-mod:
+	grep debian .git/HEAD
+	sh autogen.sh
+	git commit ChangeLog -m "Updating ChangeLog for a new Debian snapshot"
+	# don't care
 	git checkout HEAD -- README.md configure.ac
 
 .PHONY: binary binary-arch binary-indep clean install
